# facteur

./: .eslintrc.json  .gitignore  .gitmodules  .jshintrc  COPYING  README.md  com.github.brainstormtrooper.facteur.json  com.github.brainstormtrooper.gnome-emailer.json  io.github.brainstormtrooper.facteur.json  main.js  meson.build
UI/: Mailing.js  Mailing_201510300000.js  Menubar.js  Results.js  Settings.js  UI.js  html.js
data/: com.github.brainstormtrooper.facteur.appdata.xml.in  com.github.brainstormtrooper.facteur.busname  com.github.brainstormtrooper.facteur.data.gresource.xml  com.github.brainstormtrooper.facteur.desktop  com.github.brainstormtrooper.facteur.gschema.xml  com.github.brainstormtrooper.facteur.service.in  com.github.brainstormtrooper.gnome-emailer.appdata.xml.in  com.github.brainstormtrooper.gnome-emailer.busname  com.github.brainstormtrooper.gnome-emailer.data.gresource.xml  com.github.brainstormtrooper.gnome-emailer.desktop.in  com.github.brainstormtrooper.gnome-emailer.gschema.xml  contentMain.ui  facteur.css  gschemas.compiled  io.github.brainstormtrooper.facteur.appdata.xml.in  io.github.brainstormtrooper.facteur.busname  io.github.brainstormtrooper.facteur.data.gresource.xml  io.github.brainstormtrooper.facteur.desktop  io.github.brainstormtrooper.facteur.desktop.in  io.github.brainstormtrooper.facteur.gschema.xml  io.github.brainstormtrooper.facteur.service.in  mailingMain.ui  meson.build  modalExtract.ui  resultsMain.ui  settingsApp.ui  settingsConx.ui  settingsMain.ui  simpleModal.ui  widgetAttachment.ui  widgetExtract.ui
data/icons/: meson.build
lib/: file.js  menubar.js  template.js
meson/: meson_post_install.py
object/: Data.js  HtmlMessage.js  Message.js  Template.js
po/: POTFILES  POTFILES.skip  fr.po  meson.build
src/: Emailer.js  com.github.brainstormtrooper.facteur.in  com.github.brainstormtrooper.facteur.src.gresource.xml  com.github.brainstormtrooper.gnome-emailer.in  com.github.brainstormtrooper.gnome-emailer.src.gresource.xml  io.github.brainstormtrooper.facteur.in  io.github.brainstormtrooper.facteur.src.gresource.xml  main.js  meson.build
src/UI/: Contents.js  Mailing.js  Menubar.js  Modal.js  Results.js  Settings.js  UI.js  com.github.brainstormtrooper.gnome-emailer.ui.gresource.xml  facteur.css  html.js  menubar.js  meson.build  settingsApp.ui  settingsConx.ui  settingsMain.ui  simpleModal.ui
src/lib/: base64.js  com.github.brainstormtrooper.gnome-emailer.lib.gresource.xml  file.js  fnmod.js  meson.build  secret.js  settings.js  table.js  template.js  time.js  uuid.js  valid.js
src/object/: Content.js  Data.js  List.js  Message.js  Settings.js  Template.js  com.github.brainstormtrooper.gnome-emailer.object.gresource.xml  meson.build
templates/Personal Notification Email Template Green/: index.html
tests/: minijasmine.js  test.js  test_connections.js  test_contents.js  test_files.js  test_message.js  test_recipients.js
tests/fixtures/: strings.js  unit_test_file
tests/fixtures/share/com.github.brainstormtrooper.facteur/: gschemas.compiled
tests/fixtures/share/com.github.brainstormtrooper.gnome-emailer/: gschemas.compiled
tests/fixtures/share/io.github.brainstormtrooper.facteur/: gschemas.compiled
